# notebook-simple-topicmodelling

./: .gitignore  README.md  pyproject.toml  quickstart.sh  requirements-dev.in  tasks.py
notebooks/: example_notebook.ipynb
