[tool.poetry]
name = "example-notebook"
version = "0.1.0"
description = "Example notebook"
authors = ["Josh Peak <neozenith.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
